# AudioLab

./: .gitignore  README.md  main.py  pyproject.toml
data/: data.txt
data/audio/: Eltaw.npy
data/chart/Eltaw_IN/: info.txt
script/: 4k_verify.py  convert_chart_4k.py  datalist.py  download_phigros_in_charts.py
src/: pre_train.py  test.py  train.py
src/condition/: wave.py
src/data/: audio2mel.py  chart2array.py  dataset.py
src/diffusion/: sampler.py  schedule.py
src/encoder/: encoder.py
src/models/: attention.py  dit.py
test/condition/: test_wave.py
test/data/: test_audio2mel.py  test_chart2array.py  test_dataset.py
test/diffusion/: test_sampler.py  test_schedule.py
test/encoder/: test_encoder.py
test/models/: test_attention.py  test_dit.py
